--- a/style2.css
+++ b/style2.css
@@ -299,15 +299,15 @@ body{
 }
 
 .serviciosCont.contenedor{
-    position: absolute;
     display: flex;
     align-items: center;
-    max-width: 50%;
+    width: 100%;
 }
 
 
 .servicios{
     display: flex;
+    flex-wrap: wrap;
     overflow: hidden;
     justify-content: space-between;
     align-content: space-between;
@@ -407,18 +407,14 @@ body{
 
 
 @media screen and (max-width: 768px) {
-    .serviciosCont.contenedor{
-        max-width: 100%;
-    }
     .servicios{
-        flex-direction: column;
         align-items: center;
     }
     .servicio{
         flex: 0 0 100%;
         padding: 10px;
     }
-    
+
 }
 .servicio{
     flex: 0 0 33.33%;    
